crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_path_start.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: import /http
---
alder::syntax

  × I was expecting an import path
   ╭─[/project/src/main.ald:1:8]
 1 │ import /http
   · ┬      ┬
   · │      ╰── expected a bundled module name, `@`, or `~`
   · ╰── this import starts here
   ╰────
