crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__import_public_names.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: pub import @alder/http
---
alder::syntax

  × a public import must say which names it re-exports at the end of the file
   ╭─[/project/src/main.ald:1:23]
 1 │ pub import @alder/http
   ·     ┬
   ·     ╰── this import starts here
   ╰────
  help: use `pub import ~/module.{ Name }` or `pub import ~/module.*`
