crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__macro_body_mismatch.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "macro value() { (] }"
---
alder::syntax

  × I found `]` where this macro's open delimiter needs `)`
   ╭─[/project/src/main.ald:1:18]
 1 │ macro value() { (] }
   ·                 ┬┬
   ·                 │╰── this closing delimiter does not match
   ·                 ╰── this delimiter is still open
   ╰────
  help: close the highlighted opening delimiter with `)`
