crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__macro_call_string_escape.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = quote!( \"\\q\" )"
---
alder::syntax

  × I do not recognize this escape sequence
   ╭─[/project/src/main.ald:1:22]
 1 │ let value = quote!( "\q" )
   · ┬                    ─┬
   · │                     ╰── unknown escape
   · ╰── this binding starts here
   ╰────
  help: use an escape such as `\n`, `\t`, `\"`, `\\`, or `\u{0041}`; a literal
        backslash is written `\\`
